Fix navbar link color in dark mode

--- a/docusaurus/src/scss/navbar.scss
+++ b/docusaurus/src/scss/navbar.scss
@@ -283,4 +283,8 @@ $selector-color-mode-toggle-wrapper: 'div[class*="ColorModeToggle"]';
       }
     }
   }
+
+  .navbar__link:not(.navbar__link--active) {
+    color: var(--strapi-neutral-400);
+  }
 }
